reduce guava usage